--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,5 +1,5 @@
 <section class="my-account-section">
-    <div class="card">
+    <div class="card" style="height: 315px;">
         <div class="card-title" style="padding:0 1rem 0 1rem;margin-top:5px">
             <div class="pro-details">
                 <div class="pro-img">
