--- a/src/app/manage-employee/manage-employee.component.css
+++ b/src/app/manage-employee/manage-employee.component.css
@@ -7,6 +7,22 @@
 .form-section {
     width: 25%;
     background-color: white;
+    height: 100%;
+}
+
+form {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#manage-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .render-section {
@@ -37,15 +53,6 @@
     left: 12rem;
 }
 
-.is-invalid {
-    border-color: #dc3545;
-}
-
-.invalid-feedback {
-    display: block;
-    color: #dc3545;
-}
-
 .actions-control {
     display: flex;
     flex-direction: row;
@@ -61,4 +68,36 @@
 
 .icon-edit {
     color: rgba(159, 159, 57, 0.717);
+}
+
+.submit-container {
+    margin-bottom: 10px;
+}
+
+.submit-btn {
+    width: 15.3rem;
+    padding: 0.6rem;
+    margin-left: 5px;
+    border: 2px solid #12a779;;
+    border-radius: 5px;
+    background-color: #12a779;
+    color: white;
+    font-weight: 600;
+}
+
+.submit-btn:hover {
+    width: 15.3rem;
+    padding: 0.6rem;
+    margin-left: 5px;
+    border: 2px solid #12a779;
+    border-radius: 5px;
+    background-color: white;
+    color: #12a779;
+    font-weight: 600;
+}
+
+.input-error {
+    border-color: #d6502b !important;
+    box-shadow: 0 0 0 0.2rem rgba(90, 18, 18, 0.25) !important;
+    background-color: #fff !important;
 }
