--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -8,6 +8,11 @@
     align-items: center;
 }
 
+.logo-css {
+    height: 3rem;
+    width: 92%;
+}
+
 .side-menu-item a {
     padding-left: 1.5rem !important;
     padding-top: 1.3rem !important;
