--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,7 +1,7 @@
 <section class="side-menus">
     <div style="width:100%">
         <div style="height:3rem">
-            img
+            <img src="assets/logo.png" class="logo-css" alt="Logo">
         </div>
         <div class="side-menu-item"><a routerLink="/" routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"><i class="bi bi-hdd-stack-fill"></i><span
